2003-07-18  Dennis Cranston <dennis_cranston at yahoo com>
	
	* gnome-network-capplet.png:  New file.

	* Makefile.am, gnome-network-preferences.c:  Add the missing
	window icon.

2003-07-18  Christian Neumair  <chris@gnome-de.org>

	* gnome-network-preferences.glade: Some more padding fixes.

2003-07-17  Dennis Cranston <dennis_cranston at yahoo com>

	* gnome-network-preferences.glade:  Minor HIG widget padding
	adjustments.  Fix a mnemonic conflict.

2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-05-15  Malcolm Tredinnick <malcolm@commsecure.com.au>
	
	* gnome-network-preferences.desktop.in: Use Header
	capitalisation for menu items. Fixes bug #112939.

2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-02-05 Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>

	* gnome-network-preferences.c: Added "/system/proxy" and
	"/system/http_proxy" to the list of directories GConfClient
	will watch. Fixes #98596 

Tue Feb  4 17:09:18 2003  Jonathan Blandford  <jrb@redhat.com>

	* Release 2.2.0.1

Tue Jan 21 01:15:14 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.2.0

Thu Jan 16 02:41:09 2003  Jonathan Blandford  <jrb@gnome.org>

	* Release 2.1.7

2003-01-10  Jody Goldberg <jody@gnome.org>

	* Release 2.1.6

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-10-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.1

2002-10-01  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0.1

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.1.0

2002-08-19  Ross Burton  <ross@burtonini.com>

	* gnome-network-preferences.desktop.in: Fix the desktop file so
	that it validates.

2002-08-08  Seth Nickell  <snickell@stanford.edu>

	* gnome-network-preferences.glade:

	Fix alignment.

2002-07-10  Jody Goldberg <jody@gnome.org>
