@@ -1,3 +1,9 @@
+Tue Aug 26 15:00:34 2003  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-network-preferences.c (setup_dialog): Work around peditor
+	bug that resets the port when we start up for the first time,
+	#120111
+
 2003-07-18  Dennis Cranston <dennis_cranston at yahoo com>
 	
 	* gnome-network-capplet.png:  New file.
